[package]
name = "titanium"
version = "0.1.0"
edition = "2021"
description = "Titanium Engine ? hybrid Quoridor AI (alpha-beta + guided MCTS)"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "fat"
codegen-units = 1

[lib]
name = "titanium"
path = "src/lib.rs"

[[bin]]
name = "titanium"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rayon = "1.10"

[dev-dependencies]
core_affinity = "0.8"
criterion = "0.5"

[[bench]]
name = "path_bfs"
harness = false

[[bench]]
name = "perft_pawn_modes"
harness = false
